--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "testEnvironment": "node"
   },
   "engines": {
-    "node": "16.x"
+    "node": "16.x",
+    "yarn": "1.x",
+    "npm": "8.x"
   }
 }
