feature: move to pnpm

--- a/package.json
+++ b/package.json
@@ -86,5 +86,9 @@
     "node": "16.x",
     "yarn": "1.x",
     "npm": "8.x"
+  },
+  "volta": {
+    "node": "18.16.0",
+    "pnpm": "8.6.0"
   }
 }
